command dictionary added

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -506,66 +506,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Второй вариант главной функции через словарь функций\n",
+    "def print_help2():    \n",
+    "    for key, value in commands_dict.items():\n",
+    "        print(f'Команда {key} выполняет следующеe действие: {value[1]}')\n",
+    "        \n",
     "commands_dict = {\n",
-    " 'p': doc_name,\n",
-    " 's': doc_shelf,\n",
-    " 'l': all_docs,\n",
-    " 'ads': add_shelf,\n",
-    " 'ds': del_shelf,\n",
-    " 'ad': add_doc,\n",
-    "  'd': del_doc,\n",
-    "  'm': move_doc,\n",
-    "  'h': print_help\n",
+    " 'p': [doc_name,'Поиск владельца документа по его номеру'],\n",
+    " 's': [doc_shelf,'Поиск полки хранения документа по его номеру'],\n",
+    " 'l': [all_docs,'Вывод информации по всем документам'],\n",
+    " 'ads': [add_shelf,'Добавить новую полку'],\n",
+    " 'ds': [del_shelf,'Удалить пустую полку'],\n",
+    " 'ad': [add_doc,'Добавить новый документ'],\n",
+    "  'd': [del_doc,'Удалить документ'],\n",
+    "  'm': [move_doc,'Переместить документ'],\n",
+    "  'h': [print_help2, 'Список всех комманд'],\n",
+    "  'q': [None, 'Выход из программы']\n",
     "}\n",
     "\n",
+    "\n",
+    "        \n",
     "def main2(): #главная функция для обработки пользовательских комманд\n",
     "    while True:\n",
     "        com = input('Введите команду (если нужен список всех комманд, введите \"h\"):')\n",
     "        if com == 'q': break\n",
     "        elif com in commands_dict.keys():\n",
-    "            commands_dict[com]()\n",
+    "            commands_dict[com][0]()\n",
     "        else: \n",
     "            print('Команда не найдена, повторите ввод (если нужен список всех комманд, введите \"h\")')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите команду (если нужен список всех комманд, введите \"h\"):l\n",
-      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
-      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 1\n",
-      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 3\n"
+      "Введите команду (если нужен список всех комманд, введите \"h\"):h\n",
+      "Команда p выполняет следующеe действие: Поиск владельца документа по его номеру\n",
+      "Команда s выполняет следующеe действие: Поиск полки хранения документа по его номеру\n",
+      "Команда l выполняет следующеe действие: Вывод информации по всем документам\n",
+      "Команда ads выполняет следующеe действие: Добавить новую полку\n",
+      "Команда ds выполняет следующеe действие: Удалить пустую полку\n",
+      "Команда ad выполняет следующеe действие: Добавить новый документ\n",
+      "Команда d выполняет следующеe действие: Удалить документ\n",
+      "Команда m выполняет следующеe действие: Переместить документ\n",
+      "Команда h выполняет следующеe действие: Список всех комманд\n",
+      "Команда q выполняет следующеe действие: Выход из программы\n",
+      "Введите команду (если нужен список всех комманд, введите \"h\"):e\n",
+      "Команда не найдена, повторите ввод (если нужен список всех комманд, введите \"h\")\n",
+      "Введите команду (если нужен список всех комманд, введите \"h\"):ads\n",
+      "Введите номер полки: 4\n",
+      "Полка добавлена. Текущий перечень полок: 1, 2, 3, 4.\n",
+      "Введите команду (если нужен список всех комманд, введите \"h\"):ds\n",
+      "Введите номер полки: 4\n",
+      "Полка удалена. Текущий перечень полок: 1, 2, 3.\n",
+      "Введите команду (если нужен список всех комманд, введите \"h\"):q\n"
      ]
     }
    ],
    "source": [
     "main2()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
